Box and Dia rules finished