@@ -14,6 +14,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -31,6 +32,7 @@ public class BoxTest {
         var prop = mock(ModalLogicalOperation.class);
         var assume = new ModalAssume<>(new LessEqual<>(STATE_0, STATE_1));
         var assume2 = new ModalAssume<>(prop, STATE_0);
+        var assume3 = new ModalAssume<>(mock(ModalLogicalOperation.class), STATE_1);
 
         // Valid proof
         assume.apply(proof);
@@ -64,7 +66,15 @@ public class BoxTest {
         // Not valid conclusion state
         proof.initializeProof(Collections.emptyList(), mock(ModalOperation.class));
         assume.apply(proof);
-        proof.getSteps().add(new ProofStepModal<>(STATE_0, 1, prop,  new ProofReason("TST", Collections.emptyList())));
+        proof.getSteps().add(new ProofStepModal<>(STATE_0, 1, prop, new ProofReason("TST", List.of())));
+
+        assertFalse(boxI.isValid(proof));
+
+        // Not valid conclusion state
+        proof.initializeProof(List.of(), mock(ModalOperation.class));
+        assume3.apply(proof);
+        assume.apply(proof);
+        proof.getSteps().add(new ProofStepModal<>(STATE_1, 2, prop, new ProofReason("TST", Collections.emptyList())));
 
         assertFalse(boxI.isValid(proof));
     }
@@ -108,7 +118,20 @@ public class BoxTest {
 
     @Test
     public void boxIApply() {
+        var boxI = new ModalBoxI<String>();
+        var pf = new ModalNaturalDeduction<>(STATE_0);
+        var prop = new VariableModal("P");
+        var assume = new ModalAssume<>(new LessEqual<>(STATE_0, STATE_1));
 
+        // Valid proof
+        assume.apply(pf);
+        pf.getSteps().add(new ProofStepModal<>(STATE_1, 1, prop, new ProofReason("TST", Collections.emptyList())));
+        boxI.apply(pf);
+
+        Assertions.assertEquals("[] P", pf.getSteps().get(pf.getSteps().size() - 1).getStep().toString());
+        Assertions.assertEquals(0, pf.getSteps().get(pf.getSteps().size() - 1).getAssumptionLevel());
+        Assertions.assertEquals("[]I [1, 2]", pf.getSteps().get(pf.getSteps().size() - 1).getProof().toString());
+        Assertions.assertEquals("s0: [] P           []I [1, 2]", pf.getSteps().get(pf.getSteps().size() - 1).toString());
     }
 
     @Test
